# cyber-toolkit

./: .dockerignore  .gitignore  CICD.md  Cargo.toml  Dockerfile  README.md  cyber_toolkit_functions.dot
.github/workflows/: ci.yml  dependencies.yml  release.yml
roles/: blue  bugbounty  cracker  dos  forensic  hunter  network  red  role_names  student
scripts/: dev.sh
src/: lib.rs  main.rs
