[package]
name = "cyber-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "6.0.0"
shlex = "1.1"
