[package]
name = "cyber-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.19", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "6.0.0"
shlex = "1.3"
async-trait = "0.1"  # For async trait support

[dev-dependencies]
tempfile = "3.20.0"
mockall = "0.13.1"
tokio-test = "0.4.4"